fix: mistype on swagger api reference
