# storage/api-docs/api-docs.json
@@ -19,13 +19,13 @@
         }
     ],
     "paths": {
-        "/api/register": {
+        "/register": {
             "post": {
                 "tags": [
                     "Auth"
                 ],
                 "summary": "Register a new user",
-                "operationId": "8a56853624e025573120a09a4c75d468",
+                "operationId": "0903f2e0df1a8857bee538fc055417f0",
                 "requestBody": {
                     "required": true,
                     "content": {
@@ -82,13 +82,13 @@
                 }
             }
         },
-        "/api/login": {
+        "/login": {
             "post": {
                 "tags": [
                     "Auth"
                 ],
                 "summary": "Login user",
-                "operationId": "a3b306d14572d1f4bd6c064b3233e7b8",
+                "operationId": "2dd578ff7aba2721293dac66833b27d1",
                 "requestBody": {
                     "required": true,
                     "content": {
@@ -139,13 +139,13 @@
                 }
             }
         },
-        "/api/logout": {
+        "/logout": {
             "post": {
                 "tags": [
                     "Auth"
                 ],
                 "summary": "Logout user",
-                "operationId": "fe8f3429cd6979b3b4517e186505f9f9",
+                "operationId": "68a6108af04af5e3bc1ea68a6c6f1299",
                 "responses": {
                     "200": {
                         "description": "Successful operation"
@@ -158,13 +158,13 @@
                 ]
             }
         },
-        "/api/campaigns": {
+        "/campaigns": {
             "get": {
                 "tags": [
                     "Campaigns"
                 ],
                 "summary": "List user campaigns",
-                "operationId": "f63bfb37edf1acfd021c50961b734ec0",
+                "operationId": "d2a1aecdf4c5fee4d3d5f820b5b2a250",
                 "responses": {
                     "200": {
                         "description": "Successful operation"
@@ -181,7 +181,7 @@
                     "Campaigns"
                 ],
                 "summary": "Create a new campaign",
-                "operationId": "272d9b28b56c8e18d5ef4c7440a05def",
+                "operationId": "a0bb4df932d4174de20c996bfa6f3783",
                 "requestBody": {
                     "required": true,
                     "content": {
@@ -212,13 +212,13 @@
                 ]
             }
         },
-        "/api/campaigns/{id}": {
+        "/campaigns/{id}": {
             "get": {
                 "tags": [
                     "Campaigns"
                 ],
                 "summary": "Get campaign details",
-                "operationId": "0f74cc63090e3f9d520d77776391f420",
+                "operationId": "2932baff0a96253f970c1d3696fa5034",
                 "parameters": [
                     {
                         "name": "id",
@@ -244,13 +244,13 @@
                 ]
             }
         },
-        "/api/campaigns/join": {
+        "/campaigns/join": {
             "post": {
                 "tags": [
                     "Campaigns"
                 ],
                 "summary": "Join a campaign",
-                "operationId": "0e1082aefe39c5037b9613b47529535e",
+                "operationId": "1d4f627b34359d07e76ea3dd8495d634",
                 "requestBody": {
                     "required": true,
                     "content": {
@@ -291,13 +291,13 @@
                 ]
             }
         },
-        "/api/campaigns/{id}/characters/{character_id}": {
+        "/campaigns/{id}/characters/{character_id}": {
             "delete": {
                 "tags": [
                     "Campaigns"
                 ],
                 "summary": "Remove character from campaign",
-                "operationId": "c52769ad4fb66acc7d64be5fed849f95",
+                "operationId": "ac254c4a7934b065bd5b9fbd904e80c6",
                 "parameters": [
                     {
                         "name": "id",
@@ -328,13 +328,13 @@
                 ]
             }
         },
-        "/api/characters": {
+        "/characters": {
             "get": {
                 "tags": [
                     "Characters"
                 ],
                 "summary": "List user characters",
-                "operationId": "1797cf6529aea596ae858da8b98f8eff",
+                "operationId": "2b73a07d33f20acc75f8d4afd7605d5f",
                 "responses": {
                     "200": {
                         "description": "Successful operation",
@@ -366,7 +366,7 @@
                     "Characters"
                 ],
                 "summary": "Create a new character",
-                "operationId": "9add7f48e7bda366ab508aeba92327a8",
+                "operationId": "ef5b98e9b0b74b2fd9a318fd4c479733",
                 "requestBody": {
                     "required": true,
                     "content": {
@@ -405,13 +405,13 @@
                 ]
             }
         },
-        "/api/characters/{id}": {
+        "/characters/{id}": {
             "get": {
                 "tags": [
                     "Characters"
                 ],
                 "summary": "Get character details",
-                "operationId": "cee1db67df83aac46e9d3a42d3ad8cb7",
+                "operationId": "16ac1acb07c078410b5ffe9839ed17c2",
                 "parameters": [
                     {
                         "name": "id",
@@ -441,7 +441,7 @@
                     "Characters"
                 ],
                 "summary": "Update character",
-                "operationId": "46de201ac19b25577e1991a8c8f2abed",
+                "operationId": "821d2b3fd3bc58de60d21da164a85fcc",
                 "parameters": [
                     {
                         "name": "id",
@@ -486,7 +486,7 @@
                     "Characters"
                 ],
                 "summary": "Delete character",
-                "operationId": "edc953591ab1fe3ba471b74b0abd718a",
+                "operationId": "a157fcbefc13849cfc3bfc85f0daaa1a",
                 "parameters": [
                     {
                         "name": "id",
